--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "gulp-sync": "^0.1.4",
     "node-notifier": "^5.1.2",
     "q": "^1.5.0",
-    "vorpal": "^1.12.0"
+    "vorpal": "^1.12.0",
+    "winston": "^2.3.1"
   },
   "devDependencies": {
-    "@types/node-notifier": "0.0.28"
+    "@types/node-notifier": "0.0.28",
+    "@types/winston": "^2.3.0"
   },
   "jspm": {
     "directories": {
