--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "haztivity-cli",
+  "name": "@haztivity/cli",
   "version": "0.1.0",
   "description": "",
   "main": "index.js",
@@ -17,34 +17,17 @@
   "license": "ISC",
   "homepage": "https://bitbucket.org/davinchi_finsi/haztivity-cli#readme",
   "dependencies": {
-    "@sokka/gulp-build-tasks": "^0.3.2",
-    "@types/q": "^1.0.0",
-    "gulp": "^3.9.1",
-    "gulp-clean": "^0.3.2",
-    "gulp-html-replace": "^1.6.2",
-    "gulp-stream-to-promise": "^0.1.0",
-    "gulp-sync": "^0.1.4",
-    "jspm-git": "^0.6.0",
-    "node-notifier": "^5.1.2",
+    "commander": "^2.9.0",
+    "extend": "^3.0.0",
+    "fuse-box": "^1.3.131",
+    "fusebox-pug-plugin": "file:///C:\\Users\\Javier Pérez Ruiz\\Projects\\haztivity\\FuseBoxPugPlugin",
     "q": "^1.5.0",
-    "vorpal": "^1.12.0",
-    "winston": "^2.3.1"
+    "typescript": "^2.2.2",
+    "vorpal": "^1.12.0"
   },
   "devDependencies": {
+    "@types/q": "^1.0.0",
     "@types/commander": "^2.3.31",
-    "@types/node-notifier": "0.0.28",
-    "@types/winston": "^2.3.0"
-  },
-  "jspm": {
-    "directories": {
-      "baseURL": "test"
-    },
-    "dependencies": {
-      "font-awesome": "npm:font-awesome@^4.7.0",
-      "jquery": "npm:jquery@^3.2.1"
-    },
-    "devDependencies": {
-      "typescript": "npm:typescript@^2.0.7"
-    }
+    "@types/node-notifier": "0.0.28"
   }
 }
