--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "extend": "^3.0.0",
     "fuse-box": "^1.3.131",
     "fusebox-pug-plugin": "file:///C:\\Users\\Javier Pérez Ruiz\\Projects\\haztivity\\FuseBoxPugPlugin",
+    "gulp-html-replace": "^1.6.2",
     "q": "^1.5.0",
     "typescript": "^2.2.2",
+    "vinyl-fs": "^2.4.4",
     "vorpal": "^1.12.0"
   },
   "devDependencies": {
