--- a/package.json
+++ b/package.json
@@ -17,19 +17,24 @@
   "license": "ISC",
   "homepage": "https://bitbucket.org/davinchi_finsi/haztivity-cli#readme",
   "dependencies": {
+    "cli-color": "^1.2.0",
     "commander": "^2.9.0",
     "extend": "^3.0.0",
     "fuse-box": "^1.3.131",
     "fusebox-pug-plugin": "file:///C:\\Users\\Javier Pérez Ruiz\\Projects\\haztivity\\FuseBoxPugPlugin",
     "gulp-html-replace": "^1.6.2",
+    "loglevel": "^1.4.1",
+    "map-stream": "0.0.7",
     "q": "^1.5.0",
     "typescript": "^2.2.2",
     "vinyl-fs": "^2.4.4",
     "vorpal": "^1.12.0"
   },
   "devDependencies": {
-    "@types/q": "^1.0.0",
+    "@types/cli-color": "^0.3.29",
     "@types/commander": "^2.3.31",
-    "@types/node-notifier": "0.0.28"
+    "@types/loglevel": "^1.4.29",
+    "@types/node-notifier": "0.0.28",
+    "@types/q": "^1.0.0"
   }
 }
