--- a/.npmignore
+++ b/.npmignore
@@ -1,10 +1,10 @@
-# Created by .ignore support plugin (hsz.mobi)
+build
+examples
 node_modules
 .idea
-jspm_packages
-test/jspm_packages
-test/dist
-.fusebox
+test
+*.log
+gulpfile.js
 ### JetBrains template
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and Webstorm
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
