--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@haztivity/cli",
-  "version": "0.2.1",
+  "version": "0.2.2",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -18,14 +18,14 @@
   },
   "author": "",
   "license": "ISC",
-  "homepage": "https://bitbucket.org/davinchi_finsi/haztivity-cli#readme",
+  "homepage": "https://bitbucket.org/davinchi_finsi/haztivity-cli",
   "dependencies": {
     "@types/uglify-js": "^2.6.28",
     "cli-color": "^1.2.0",
     "commander": "^2.9.0",
     "extend": "^3.0.0",
     "fuse-box": "^1.3.131",
-    "fusebox-pug-plugin": "file:///C:\\Users\\Javier Pérez Ruiz\\Projects\\haztivity\\FuseBoxPugPlugin",
+    "fusebox-pug-plugin": "fusebox-pug-plugin@^1.0.0",
     "gulp-html-replace": "^1.6.2",
     "loglevel": "^1.4.1",
     "map-stream": "0.0.7",
