--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "@haztivity/cli",
-  "version": "0.2.4",
+  "version": "0.2.5",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build":"tsc -p libs",
+    "build": "tsc -p libs",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "bin": {
@@ -41,6 +41,7 @@
     "@types/commander": "^2.3.31",
     "@types/loglevel": "^1.4.29",
     "@types/node-notifier": "0.0.28",
+    "@types/node-sass": "^3.10.32",
     "@types/q": "^1.0.0"
   },
   "types": "./libs/index.ts",
