--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://bitbucket.org/davinchi_finsi/haztivity-cli",
   "dependencies": {
     "@types/uglify-js": "^2.6.28",
+    "autoprefixer": "^7.1.5",
     "cli-color": "^1.2.0",
     "commander": "^2.9.0",
     "extend": "^3.0.0",
@@ -31,6 +32,7 @@
     "loglevel": "^1.4.1",
     "map-stream": "0.0.7",
     "node-sass": "^4.5.2",
+    "postcss": "^6.0.13",
     "q": "^1.5.0",
     "typescript": "^2.2.2",
     "vinyl-fs": "^2.4.4",
