--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "cli-color": "^1.2.0",
     "commander": "^2.9.0",
     "extend": "^3.0.0",
+    "fs-extra": "^5.0.0",
     "fuse-box": "^1.3.131",
     "fusebox-pug-plugin": "^1.0.0",
+    "glob": "^7.1.2",
     "gulp-html-replace": "^1.6.2",
     "loglevel": "^1.4.1",
     "map-stream": "0.0.7",
@@ -41,6 +43,8 @@
   "devDependencies": {
     "@types/cli-color": "^0.3.29",
     "@types/commander": "^2.3.31",
+    "@types/fs-extra": "^5.0.0",
+    "@types/glob": "^5.0.34",
     "@types/loglevel": "^1.4.29",
     "@types/node-notifier": "0.0.28",
     "@types/node-sass": "^3.10.32",
