--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
 # Created by .ignore support plugin (hsz.mobi)
 node_modules
 .idea
+.fusebox
 jspm_packages
-test/jspm_packages
-test/dist
+test
 .fusebox
 ### JetBrains template
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and Webstorm
