--- a/package.json
+++ b/package.json
@@ -21,34 +21,28 @@
   "license": "ISC",
   "homepage": "https://bitbucket.org/davinchi_finsi/haztivity-cli",
   "dependencies": {
-    "@types/uglify-js": "^2.6.28",
-    "autoprefixer": "^7.1.5",
+    "autoprefixer": "^7.2.5",
     "cli-color": "^1.2.0",
-    "commander": "^2.9.0",
-    "extend": "^3.0.0",
+    "commander": "^2.13.0",
+    "extend": "^3.0.1",
     "fs-extra": "^5.0.0",
-    "fuse-box": "^1.3.131",
-    "fusebox-pug-plugin": "^1.0.0",
+    "fuse-box": "^3.0.2",
+    "fusebox-pug-plugin": "^2.0.0",
     "glob": "^7.1.2",
-    "gulp-html-replace": "^1.6.2",
-    "loglevel": "^1.4.1",
-    "map-stream": "0.0.7",
-    "node-sass": "^4.5.2",
-    "postcss": "^6.0.13",
-    "q": "^1.5.0",
-    "typescript": "^2.2.2",
-    "vinyl-fs": "^2.4.4",
-    "vorpal": "^1.12.0"
+    "loglevel": "^1.6.1",
+    "postcss": "^6.0.16",
+    "q": "^1.5.1",
+    "tslib": "^1.8.1",
+    "typescript": "^2.6.2"
   },
   "devDependencies": {
     "@types/cli-color": "^0.3.29",
-    "@types/commander": "^2.3.31",
+    "@types/commander": "^2.12.2",
     "@types/fs-extra": "^5.0.0",
     "@types/glob": "^5.0.34",
-    "@types/loglevel": "^1.4.29",
+    "@types/loglevel": "^1.5.3",
     "@types/node-notifier": "0.0.28",
-    "@types/node-sass": "^3.10.32",
-    "@types/q": "^1.0.0"
+    "@types/q": "^1.0.6"
   },
   "types": "./libs/index.ts",
   "typings": "./libs/index.ts",
