--- a/package.json
+++ b/package.json
@@ -33,7 +33,6 @@
     "gulp-html-replace": "^1.6.2",
     "loglevel": "^1.4.1",
     "map-stream": "0.0.7",
-    "node-sass": "^4.5.2",
     "postcss": "^6.0.13",
     "q": "^1.5.0",
     "typescript": "^2.2.2",
@@ -47,7 +46,8 @@
     "@types/glob": "^5.0.34",
     "@types/loglevel": "^1.4.29",
     "@types/node-notifier": "0.0.28",
-    "@types/q": "^1.0.0"
+    "@types/q": "^1.0.0",
+    "node-sass": "^4.12.0"
   },
   "peerDependencies": {
     "node-sass": "^4.11.0"
